--- a/.github/workflows/DIGITALOCEAN_DEPLOY.yml
+++ b/.github/workflows/DIGITALOCEAN_DEPLOY.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Create .env
         run: echo 'PORT=${{secrets.PORT}}' > .env
       - name: Delete volume db_data
-        run: docker volume rm db_data
+        run: docker volume rm 31w-21647_db_data
       - name: Run docker compose up build
         run: docker-compose up -d
