Update .yml - ad production volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mariadb:10.6.4-focal
     command: "--default-authentication-plugin=mysql_native_password"
     volumes:
-      - db_data:/var/lib/mysql
+      - db_data_production:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${ROOT_PASSWORD:-somewordpress}
