--- a/.github/workflows/DIGITALOCEAN_DEPLOY.yml
+++ b/.github/workflows/DIGITALOCEAN_DEPLOY.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: self-hosted
     
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@tp1
       - name: Create .env
         run: echo 'PORT=${{secrets.PORT}}' > .env
       - name: Run docker compose up build
