--- a/.github/workflows/DIGITALOCEAN_DEPLOY.yml
+++ b/.github/workflows/DIGITALOCEAN_DEPLOY.yml
@@ -8,13 +8,9 @@ jobs:
     
     steps:
       - uses: actions/checkout@main
+      - run: git submodule update --init --recursive
       - name: Create .env
         run: echo 'PORT=${{secrets.PORT}}' > .env
       - name: Run docker compose up build
         run: docker-compose up -d
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Approve submodule
-        run: git config --global --add safe.directory /home/pcavendano/actions-runner/_work/31w-21647/31w-21647
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
+
