--- a/.github/workflows/DIGITALOCEAN_DEPLOY.yml
+++ b/.github/workflows/DIGITALOCEAN_DEPLOY.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: self-hosted
     
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v3
       - run: git submodule update --init --recursive
       - name: Create .env file
         run: echo 'PORT=${{secrets.PORT}}' > .env
