--- a/.github/workflows/DIGITALOCEAN_DEPLOY.yml
+++ b/.github/workflows/DIGITALOCEAN_DEPLOY.yml
@@ -7,10 +7,8 @@ jobs:
     runs-on: self-hosted
     
     steps:
-      - uses: actions/checkout@v3
-      - run: git submodule update --init --recursive
-      - name: Create .env file
+      - uses: actions/checkout@main
+      - name: Create .env
         run: echo 'PORT=${{secrets.PORT}}' > .env
       - name: Run docker compose up build
         run: docker-compose up -d
-
