--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,18 @@ services:
       - 33060
     networks:
       - wp
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - '8080:90'
+    environment:
+      PMA_HOST: ${WORDPRESS_DB_HOST:-db}
+      MYSQL_ROOT_PASSWORD: ${WORDPRESS_DB_PASSWORD:-wordpress}
+    networks:
+      - wp
   wordpress:
     image: wordpress:latest
     ports:
