--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.1"
 services:
   db:
     image: mariadb:10.6.4-focal
@@ -32,6 +32,7 @@ services:
     image: wordpress:latest
     ports:
       - "${PORT:-8000}:80"
+    user: 1000:1000
     restart: always
     depends_on:
       - db
